--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "scripts": {
         "build": "nest build",
         "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-        "deploy": "npm ci && npm run build && npm run start:prod",
         "start": "nest start",
         "start:dev": "nest start --watch",
         "start:debug": "nest start --debug --watch",
@@ -22,6 +21,7 @@
     },
     "dependencies": {
         "@aws-sdk/client-s3": "^3.613.0",
+        "@nestjs/cli": "^10.0.0",
         "@nestjs/common": "^10.0.0",
         "@nestjs/config": "^3.2.3",
         "@nestjs/core": "^10.0.0",
